<resources>
    <string name="app_name">ProCare</string>
    <string name="message_to_get_data_from_api">Neuspješan dohvat podataka sa servera</string>
    <string name="message_bad_user_data">Neispravni korisnički podaci</string>
    <string name="message_oib_already_exists">Upisani OIB već postoji</string>
    <string name="message_mail_already_exists">Upisani eMail već postoji</string>
    <string name="error_infinitiv">Greška</string>
    <string name="error_razlozi_service_fail">Došlo je do greške prilikom dohvaćanja podataka sa servera</string>
    <string name="error_sending_poziv_u_pomoc">Došlo je do greške prilikom slanja poziva u pomoć</string>
    <string name="error_razlog_nije_naveden">Za slanje poziva u pomoć potrebno je odabrati razlog poziva</string>
    <string name="error_lokacija_nije_dohvacena">Vaša lokacija nija dohvačena</string>

    <string name="error_ime_field">Ime ne smije biti prazno</string>
    <string name="error_prezime_field">Prezime ne smije biti prazno</string>
    <string name="error_email_field">Email ne smije biti prazno</string>
    <string name="error_email_validation">Email nije validan</string>
    <string name="error_oib_validation">OIB nije validan</string>
    <string name="error_lozinka_field">Šifra ne smije biti prazno</string>
    <string name="error_lozinka_length_field">Šifra mora sadržavati minimalno 5 znakova</string>
    <string name="error_adresa_field">Adresa ne smije biti prazno</string>
    <string name="error_oib_field">OIB ne smije biti prazno</string>
    <string name="error_broj_mobitela_field">Broj mobitela ne smije biti prazno</string>
    <string name="error_broj_mobitela_length">Broj mobitela mora biti duljine od 9 do 12 znakova</string>

    <string name="update_succeeded">Podaci su uspješno ažurirani</string>

    <string name="broj_mobitela">Broj mobitela</string>
    <string name="spremi">Spremi</string>
    <string name="oib">OIB</string>
    <string name="adresa">Adresa</string>
    <string name="lozinka">Lozinka</string>
    <string name="vasa_lozinka">Pohranjena lozinka</string>
    <string name="email">Email</string>
    <string name="prezime">Prezime</string>
    <string name="ime">Ime</string>
    <string name="prijava">Prijava</string>
    <string name="registracija">Registracija</string>
    <string name="txt_postavke">Račun</string>
    <string name="txt_poziv_hitne_pomoci">Poziv hitne pomoći</string>
    <string name="txt_lista_hitnih_pomoci">Lista hitnih pomoći</string>
    <string name="poziv_pomoci">Pozovi pomoć</string>
    <string name="succeeded_poziv_u_pomoc">Uspješno je poslan poziv u pomoć</string>
    <string name="alert_help_message_prefix">Već ste uputili poziv hitnoj pomoći unutar proteklih 15 minuta. Sljedeći poziv je moguć za</string>
    <string name="alert_help_message_postfix">minuta</string>
    <string name="alert_help_title">Upozorenje!</string>
    <string name="alert_help_button_ok">U redu</string>
    <string name="help_message_button_press">Za slanje poziva u pomoć gumb je potrebno držati 5 sekundi</string>
    <string name="display_progress">Dobavljam lokaciju…</string>
    <string name="onShake_call">Poziv u pomoć</string>
    <string name="bPostavke">Postavke</string>
    <string name="switchSettings">Servis za trešnju</string>
    <string name="button_map">Karta</string>
    <string name="button_hospital_lista">Lista</string>

</resources>
