<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.air1703.procare.RegisterActivity">

    <EditText
        android:id="@+id/etIme"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/ime"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/etPrezime"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/prezime"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etIme"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etPrezime"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/pPassword"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/lozinka"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etAdresa"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/adresa"
        android:inputType="textPostalAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pPassword"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etOIB"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/oib"
        android:inputType="number"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/etAdresa"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.533" />

    <EditText
        android:id="@+id/etBrojMob"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/broj_mobitela"
        android:inputType="number"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/etOIB"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.533"/>

    <Button
        android:id="@+id/buttonRegistracija"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:text="@string/spremi"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etBrojMob"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
