<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.air1703.procare.UserAreaActivity">

    <Button
        android:id="@+id/bPostavke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txt_postavke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="80dp">

        <Button
            android:id="@+id/bPozivPomoc"
            android:layout_width="0dp"
            android:layout_height="78dp"

            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/bListaHitnaPomoc"
            android:layout_weight="1"
            android:text="@string/txt_poziv_hitne_pomoci"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/bListaHitnaPomoc"
            android:layout_width="0dp"
            android:layout_height="78dp"

            android:layout_alignBaseline="@+id/bPozivPomoc"
            android:layout_alignBottom="@+id/bPozivPomoc"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/txt_lista_hitnih_pomoci"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
